# calc

./: CMakeLists.txt
include/: calc.hpp
src/: calc.cpp  main.cpp
